Create shopping cart during user creation
